# OI_Memory

./: .gitignore  GOOGLE_APPLICATION_CREDENTIALS.json  README.md  pyproject.toml  requirements.txt
api/: example.py  llama_index_manager.py
functions/extract_text_pdf/: helpers.py  main.py  requirements.txt
functions/pdf_to_image_and_ocr/: main.py  requirements.txt
functions/route_raw_data/: main.py  requirements.txt
oi_cloud/: OI_Cloud_Handler.py  test.py
oi_cloud/functions/extract_text_pdf/: helpers.py  main.py
oi_cloud/functions/llama_index_handler/: main.py  requirements.txt
oi_cloud/functions/pdf_to_image_and_ocr/: helpers.py  main.py  requirements.txt
oi_cloud/functions/route_raw_data/: main.py  requirements.txt
oi_cloud/storage/: main.py
oi_cloud/storage/gcs_module/: gcs_handler.py
testing/: route_raw_data.py
